<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="student.if419014.informasicorona.ui.global.GlobalFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_global" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="student.if419014.informasicorona.ui.continent.ContinentFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_continent" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="student.if419014.informasicorona.ui.country.CountryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_country" />
</navigation>