<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:src="@drawable/logo_informasi">
        </ImageView>
        <TextView
            android:layout_marginTop="-100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/splash_header"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:shadowRadius="10"
            android:shadowDx="1"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/splash_subheader"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/white"/>
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/loading"/>
    </LinearLayout>
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/created_by"
        android:textSize="10sp"
        android:textStyle="italic"
        android:textColor="@color/white"/>
</RelativeLayout>