<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <pl.droidsonroids.gif.GifImageView
            android:visibility="gone"
            android:id="@+id/loading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/loading"
            android:layout_gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/lineChart"
                    android:minHeight="200dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ScrollView
            android:id="@+id/svTemp"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/lineChart"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.global.GlobalFragment"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingHorizontal="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/cases">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/txtcases"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/cases"/>
                            <TextView
                                android:id="@+id/cases"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:text="123141212"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/cases">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/txttodaycases"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/today_cases"/>
                            <TextView
                                android:id="@+id/todaycases"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:text="123141212"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_marginRight="10dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/active">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/txtactive"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/active"/>
                            <TextView
                                android:id="@+id/active"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:text="123141212"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/critical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/txtcritical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/critical"/>
                            <TextView
                                android:id="@+id/critical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:text="123141212"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/recovered">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/txtrecovered"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/recovered"/>
                            <TextView
                                android:id="@+id/recovered"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:text="123141212"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/recovered">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/txttodayrecovered"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/today_recovered"/>
                            <TextView
                                android:id="@+id/todayrecovered"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:text="123141212"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/death">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/txtdeath"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/death"/>
                            <TextView
                                android:id="@+id/death"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:text="123141212"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/death">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/txttodaydeath"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/today_death"/>
                            <TextView
                                android:id="@+id/todaydeath"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                tools:text="123141212"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:textColor="#A5A5A5"
                    android:textSize="15sp"
                    tools:text="Update 12 Juli 2021">

                </TextView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</ScrollView>